# xenia

./: .gitignore  .gitmodules  CMakeLists.txt  bootstrap-msvc.ps1  bootstrap.sh  meson.build  meson_options.txt  msys-deps
buildfiles/cmake/: MSVC.cmake
buildfiles/meson/: x86_64-mingw-w64-MSYS2.ini  x86_64-mingw-w64.ini  (+3 more)
dependencies/: meson.build
dependencies/DirectXShaderCompiler/: meson.build
dependencies/FFmpeg/: meson.build
dependencies/FidelityFX/: meson.build
dependencies/SDL2/: meson.build
dependencies/SPIRV-Headers/: meson.build
dependencies/SPIRV-Tools/: meson.build
dependencies/VulkanMemoryAllocator/: meson.build
dependencies/aes_128/: meson.build
dependencies/capstone/: meson.build
dependencies/catch/: meson.build
dependencies/cpptoml/: meson.build
dependencies/crypto/: meson.build
dependencies/curl/: meson.build
dependencies/cxxopts/: meson.build
dependencies/date/: meson.build
dependencies/discord-rpc/: meson.build
dependencies/disruptorplus/: meson.build
dependencies/dlmalloc/: meson.build
dependencies/dxbc/: meson.build
dependencies/fmt/: meson.build
dependencies/fxaa/: meson.build
dependencies/glslang/: meson.build
dependencies/half/: meson.build
dependencies/imgui/: meson.build
dependencies/llvm/: meson.build
dependencies/microprofile/: meson.build
dependencies/pe/: meson.build
dependencies/rapidjson/: meson.build
dependencies/snappy/: meson.build
dependencies/stb/: meson.build
dependencies/utfcpp/: meson.build
dependencies/vulkan-headers/: meson.build
dependencies/xbyak/: meson.build
dependencies/xxhash/: meson.build
include/: meson.build
src/: meson.build
src/mspack/: meson.build
src/xenia/: config.cc  emulator.cc  memory.cc  meson.build
src/xenia/app/: emulator_window.cc  meson.build  xenia_main.cc
src/xenia/app/discord/: discord_presence.cc  meson.build
src/xenia/apu/: meson.build  xma_context.cc  xma_decoder.cc
src/xenia/apu/nop/: meson.build
src/xenia/apu/sdl/: meson.build
src/xenia/apu/xaudio2/: meson.build
src/xenia/base/: cvar.cc  filesystem_posix.cc  logging.cc  main_init_win.cc  mapped_memory_win.cc  memory_posix.cc  meson.build  profiling.cc  string.cc  system_gnulinux.cc  threading_timer_queue.cc  utf8.cc  vec128.cc
src/xenia/base/testing/: chrono_test.cc  memory_test.cc  threading_test.cc  utf8_test.cc
src/xenia/cpu/: lzx.cc  meson.build  xex_module.cc
src/xenia/cpu/backend/: meson.build
src/xenia/cpu/backend/x64/: meson.build  x64_assembler.cc  x64_backend.cc  x64_code_cache.cc  x64_emitter.cc  x64_seq_vector.cc
src/xenia/cpu/compiler/passes/: constant_propagation_pass.cc  data_flow_analysis_pass.cc  finalization_pass.cc  value_reduction_pass.cc
src/xenia/cpu/hir/: meson.build  value.cc
src/xenia/cpu/ppc/: meson.build  ppc_emit_altivec.cc  ppc_hir_builder.cc
src/xenia/debug/: meson.build
src/xenia/debug/ui/: debug_window.cc  meson.build
src/xenia/gpu/: command_processor.cc  draw_util.cc  dxbc_shader_translator.cc  dxbc_shader_translator_alu.cc  dxbc_shader_translator_fetch.cc  meson.build  render_target_cache.cc  shader.cc  shader_compiler_main.cc  shader_interpreter.cc  spirv_shader_translator.cc  spirv_shader_translator_alu.cc  spirv_shader_translator_fetch.cc  spirv_shader_translator_rb.cc  texture_conversion.cc  texture_extent.cc  texture_info.cc  trace_dump.cc  trace_reader.cc  trace_viewer.cc  trace_writer.cc  xenos.cc
src/xenia/gpu/d3d12/: d3d12_render_target_cache.cc  meson.build  pipeline_cache.cc
src/xenia/gpu/null/: meson.build
src/xenia/gpu/shaders/: meson.build
src/xenia/gpu/vulkan/: meson.build  vulkan_pipeline_cache.cc  vulkan_render_target_cache.cc
src/xenia/helper/: meson.build
src/xenia/helper/sdl/: meson.build
src/xenia/hid/: hid_demo.cc  meson.build
src/xenia/hid/nop/: meson.build
src/xenia/hid/sdl/: meson.build
src/xenia/hid/winkey/: meson.build
src/xenia/hid/xinput/: meson.build
src/xenia/kernel/: kernel_state.cc  meson.build  xthread.cc
src/xenia/kernel/info/: meson.build
src/xenia/kernel/util/: meson.build
src/xenia/kernel/xam/: content_manager.cc  meson.build  user_profile.cc  xam_enum.cc  xam_info.cc  xam_task.cc  xam_ui.cc
src/xenia/kernel/xam/apps/: meson.build
src/xenia/kernel/xbdm/: meson.build
src/xenia/kernel/xboxkrnl/: meson.build  xboxkrnl_crypt.cc  xboxkrnl_module.cc
src/xenia/tools/: meson.build
src/xenia/tools/api-scanner/: meson.build
src/xenia/ui/: graphics_util.cc  imgui_dialog.cc  imgui_drawer.cc  meson.build  window.cc  window_demo.cc
src/xenia/ui/d3d12/: meson.build
src/xenia/ui/shaders/: meson.build
src/xenia/ui/vulkan/: meson.build
src/xenia/ui/vulkan/functions/: meson.build
src/xenia/vfs/: meson.build
src/xenia/vfs/devices/: meson.build  stfs_container_file.cc
subprojects/: DirectXShaderCompiler.wrap  FFmpeg.wrap  FidelityFX-CAS.wrap  FidelityFX-FSR.wrap  SDL2.wrap  SPIRV-Headers.wrap  SPIRV-Tools.wrap  aes_128.wrap  capstone.wrap  catch.wrap  cppDES.wrap  cpptoml.wrap  curl.wrap  cxxopts.wrap  date.wrap  discord-rpc.wrap  disruptorplus.wrap  dxbc.wrap  fmt.wrap  glslang.wrap  imgui.wrap  libcurl.wrap  llvm-win.wrap  rapidjson.wrap  renderdoc.wrap  snappy.wrap  utfcpp.wrap  vulkan-headers.wrap  vulkanmemoryallocator.wrap  xbyak.wrap  xxhash.wrap
subprojects/cppDES/: meson.build
subprojects/cppDES/include/: meson.build
subprojects/cppDES/src/: meson.build
subprojects/imgui/: meson.build
subprojects/imgui/include/: meson.build
subprojects/imgui/src/: meson.build
subprojects/packagefiles/SDL2/: meson.build
subprojects/packagefiles/VulkanMemoryAllocator/: meson.build
subprojects/packagefiles/aes_128/: meson.build
subprojects/packagefiles/aes_128/unroll/: meson.build
subprojects/packagefiles/capstone/: meson.build
subprojects/packagefiles/capstone/arch/: meson.build
subprojects/packagefiles/capstone/arch/X86/: meson.build
subprojects/packagefiles/capstone/include/: meson.build
subprojects/packagefiles/cpptoml/: meson.build
subprojects/packagefiles/glslang/: meson.build
subprojects/packagefiles/half/: meson.build
(+132 files in other folders)
