# xenia/base
#============================================================================


# src files
#============================================================================

xenia_src += files(
    'arena.cc',
    'bit_map.cc',
    'bit_stream.cc',
    'byte_stream.cc',
    'clock.cc',
    'clock_posix.cc',
    'clock_win.cc',
    'clock_x64.cc',
    'console_app_main_android.cc',
    'console_app_main_posix.cc',
    'console_app_main_win.cc',
    'console_posix.cc',
    'console_win.cc',
    'cvar.cc',
    'cvar_android.cc',
    'debugging_mac.cc',
    'debugging_posix.cc',
    'debugging_win.cc',
    'exception_handler.cc',
    'exception_handler_posix.cc',
    'exception_handler_win.cc',
    'filesystem.cc',
    'filesystem_android.cc',
    'filesystem_posix.cc',
    'filesystem_wildcard.cc',
    'filesystem_win.cc',
    'fuzzy.cc',
    'host_thread_context.cc',
    'logging.cc',
    'main_android.cc',
    'main_init_android.cc',
    'main_init_posix.cc',
    'main_init_win.cc',
    'main_win.cc',
    'mapped_memory_posix.cc',
    'mapped_memory_win.cc',
    'memory.cc',
    'memory_posix.cc',
    'memory_win.cc',
    'mutex.cc',
    'profiling.cc',
    'ring_buffer.cc',
    'socket_win.cc',
    'string.cc',
    'string_buffer.cc',
    'system_android.cc',
    'system_gnulinux.cc',
    'system_win.cc',
    'threading.cc',
    'threading_mac.cc',
    'threading_posix.cc',
    'threading_timer_queue.cc',
    'threading_win.cc',
    'utf8.cc',
    'vec128.cc')

# include directories
#========================================================================

# include current dir
#---------------------------------------------------
xenia_inc += include_directories('.')
