# xenia/debug
#============================================================================

# include directories
#========================================================================

# include current dir
#---------------------------------------------------
xenia_inc += include_directories('.')

# add subdirectories
#---------------------------------------------------
dirs = ['ui']

foreach dir : dirs
    subdir(dir)
endforeach