# xenia/helper
#============================================================================

# include directories
#========================================================================

# include current dir
#---------------------------------------------------
xenia_inc += include_directories('.')

# add subdirectories
#---------------------------------------------------
dirs = ['sdl']

foreach dir : dirs
    subdir(dir)
endforeach