# xenia/tools
#============================================================================


# include directories
#========================================================================

# include current dir
#---------------------------------------------------
xenia_inc += include_directories('.')

# add subdirectories
#---------------------------------------------------
dirs = [
  'api-scanner'
]

foreach dir : dirs
    subdir(dir)
endforeach