# crypto src
#============================================================================

# build library
#---------------------------------------------------
cppdes_lib = library(
    'crypto',
    sources : files('des.cpp'),
    include_directories : cppdes_inc,
    gnu_symbol_visibility: 'hidden')
